Adding new endpoint to delete product types
